--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,12 +40,16 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
     background: var(--roxo) url(../imagens/predio.jpg) no-repeat;
     background-size: cover;
+    background-position: center center;
     height: 200px;
 }
 
