--- a/estilos/style.css
+++ b/estilos/style.css
@@ -41,7 +41,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-    transition: width .3s, height .3s;
+    transition: width .2s, height .2s;
     transition-timing-function: ease;
 }
 
@@ -58,3 +58,11 @@ section#login > div#formulario {
     padding: 10px;
 }
 
+div#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+}
